Port to 1.21.1 Fabric and NeoForge Basic test passed